--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif&display=swap');
 #modal-content{
     border-radius: 14px;
     /* height: 200px; */
@@ -15,7 +15,7 @@
     justify-content: center;
     width: 100%;
     align-items: center;
-    font-family: Montserrat;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 form{
@@ -39,13 +39,13 @@ form{
     width: 100%;
     border: 2px solid grey;
     box-shadow: 3px 3px 3px grey;
-    font-family: Montserrat;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .demoUser{
     width: 100%;
     border: 2px solid grey;
     box-shadow: 3px 3px 3px grey;
-    font-family: Montserrat;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .demoUser:hover{
     background-color: green;
