--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif&display=swap');
 .nav-bar{
     display: flex;
     justify-content: space-between;
@@ -16,7 +16,7 @@
     font-size: 21px;
 } */
 .logo-title{
-    font-family: Montserrat;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .new-spot-link{
     text-decoration: none;
@@ -25,7 +25,7 @@
     margin-left: 55%;
     font-weight: 600;
     color: #41BEE6;
-    font-family:Montserrat;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .new-spot-link:hover{
     color: #1a7897
@@ -60,7 +60,7 @@
     /* align-items: center; */
     justify-content: center;
     text-align: center;
-    font-family: Montserrat;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .loggedout{
    height: 50px;
@@ -86,7 +86,7 @@
     width: 90%;
     align-self: center;
     border-radius: 10px;
-    font-family: Montserrat;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size:12px;
 }
 .manage-btn:hover{
@@ -103,7 +103,7 @@
     /* margin-top: -5px; */
     background-color: grey;
     color: white;
-    font-family: Montserrat;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .logout-btn:hover{
     background-color: maroon;
